2004-02-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 README, win32/INSTALL.txt:
  - Documented the need to edit win32/common
 tools/rmlo.cxx:
  - Ported to 2.x API (thanks GB Clark)
2004-02-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh, configure.ac.in:
  - Fixes for using config/m4 directory (Patrick Welche)
2004-02-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 .cvsignore:
  - Added configure.lineno (Patrick Welche)
 autogen.sh:
  - Made aclocal work with config/m4 instead of . (Patrick Welche)
 doc/libpqxx.xml:
  - Typos fixed (Patrick Welche)
2004-02-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/largeobject.cxx: 
  - Fixed risk of incorrect errno 
2004-02-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test075.cxx:
  - g++ 2.95 compile fix
 tools/maketestam.pl:
  - Removed redundant -I option
 tools/Makefile.am:
  - Added pqxxbench
  - Added rmlo
 tools/pqxxbench.cxx, tools/pqxxbench.in:
  - New
2004-02-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test049.cxx:
  - Make count_if() compile on Sun CC (thanks Jon Meinecke)
2004-02-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 autogen.sh, configure.ac.in:
  - Patrick Welche patch: make libtoolize "copy over the necessary .m4 files
  into ., then aclocal looks in . and adds them to aclocal.m4, and everything
  is happy."
  - Patrick Welche cont'd: "Didn't need to remove RANLIB, but as you require a
  reasonably new autoconf, int won't hurt..)"
  - Moved m4 stuff into config/m4, thanks Patrick Welche
 include/pqxx/cachedresult.h, include/pqxx/cursor.h:
  - Workaround for Sun CC compile problem (thanks Jon Meinecke)
2004-02-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/result.hxx:
  - Back to full test coverage
 test/test071.cxx:
  - Made reverse_iterator part conditional on PQXX_HAVE_REVERSE_ITERATOR
 test/test075.cxx:
  - New
  - Tests reverse result iteration (including rbegin() and rend())
 win32/libpqxx.mak:
  - Added winsock32 library to link options (thanks Fred Moyer)