@@ -1,3 +1,7 @@
+2004-03-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ include/pqxx/result.hxx, include/pqxx/util.hxx, src/util.cxx:
+  - New template from_string<>() (stricter, faster, no locale problem)
+  - Deprecated FromString<>()
 2004-02-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
  README, win32/INSTALL.txt:
   - Documented the need to edit win32/common
